@@ -1,3 +1,8 @@
+Fri Jan 16 18:42:58 2015  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* tool/redmine-backporter.rb: support adding related revisions
+	  to issues.
+
 Fri Jan 16 17:20:33 2015  Koichi Sasada  <ko1@atdot.net>
 
 	vm.c, vm_core.h: constify VM_CF_LEP, VM_CF_PREV_EP, VM_CF_BLOCK_PTR
